<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newbook.NewBookActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/add_book"
            app:navigationIcon="@drawable/ic_back"
            app:titleTextColor="@color/white"
            app:navigationIconTint="@color/white"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/orange"
            android:indeterminate="true"
            android:visibility="gone"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="320dp"
                android:src="@drawable/image_preview"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:contentDescription="@string/upload_image" />

            <Button
                android:id="@+id/btn_image"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAlignment="center"
                app:icon="@drawable/ic_image"
                android:text="@string/upload_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title"/>

            <EditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:hint="@string/title_hint"/>

            <TextView
                android:id="@+id/tv_image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="jawir_book.jpg"
                android:layout_marginTop="8dp"
                android:textAlignment="textEnd"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/ed_author"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:hint="@string/author_hint"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:text="@string/submit"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>